# backend-announcement

./: manage.py  pyproject.toml
announcement/: admin.py  models.py  serializers.py  urls.py  views.py
announcement/migrations/: 0001_initial.py  0002_announcement_created_date.py
avito_announcment/: settings.py  urls.py  wsgi.py
